fix: footer an empty page too low

--- a/shared.css
+++ b/shared.css
@@ -46,7 +46,7 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     font-family: Ubuntu, sans-serif;
-    min-height: 100vh;
+    min-height: calc(100vh - 200px);
     padding-bottom: 200px;
 }
 
